# wildboar

./: .dir-locals.el  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CNAME  Dockerfile  Examples.ipynb  LICENSE  Makefile  README.md  SECURITY.md  _versions.json  build-wheel.sh  deploy.sh  examples  index.html  notes.org  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test.py  test2.py  test_y_handling.py  time_get_distribution.py  time_partition.py  time_sliding_distance.py
.github/ISSUE_TEMPLATE/: Bug_report.md
.github/workflows/: build-deploy-wheels.yml  build-deply-docs.yml  codspeed.yml  pre-commit.yml
1.0/: .buildinfo  examples.html  genindex.html  guide.html  index.html  install.html  search.html  searchindex.js  tutorial.html
1.0.X/: .buildinfo  examples.html  genindex.html  guide.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
1.0.X/.doctrees/: environment.pickle  examples.doctree  guide.doctree  index.doctree  install.doctree  tutorial.doctree
1.0.X/_sources/: index.rst.txt
1.0.X/_static/: documentation_options.js
1.0.X/examples/: counterfactuals.html  embeddings.html  supervised.html  unsupervised.html
1.0.X/guide/: datasets.html  explain.html  supervised.html  unsupervised.html
1.0.X/wildboar/: index.html
1.0/.doctrees/: environment.pickle  examples.doctree  guide.doctree  index.doctree  install.doctree  tutorial.doctree
1.0/_sources/: index.rst.txt
1.0/examples/: counterfactuals.html  embeddings.html  supervised.html  unsupervised.html
1.0/guide/: datasets.html  explain.html  supervised.html  unsupervised.html
1.0/wildboar/: index.html
1.1.X/: .buildinfo  examples.html  genindex.html  guide.html  index.html  install.html  more.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
1.1.X/.doctrees/: environment.pickle  examples.doctree  guide.doctree  index.doctree  install.doctree  more.doctree  tutorial.doctree
1.1.X/_sources/: guide.rst.txt  index.rst.txt
1.1.X/_static/: documentation_options.js
1.1.X/examples/: annotate.html  counterfactuals.html  distance.html  embeddings.html  explainability.html  supervised.html  transform.html  unsupervised.html
1.1.X/guide/: basics.html  datasets.html  explain.html  metrics.html  supervised.html  unsupervised.html
1.1.X/more/: contributing.html  news.html  whatsnew.html
1.1.X/wildboar/: index.html
1.2/: .buildinfo  examples.html  genindex.html  guide.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
1.2.X/: .buildinfo  examples.html  genindex.html  guide.html  index.html  install.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
1.2.X/.doctrees/: examples.doctree  guide.doctree  index.doctree
1.2.X/_sources/: index.rst.txt  quickstart.rst.txt
1.2.X/_static/: documentation_options.js  pygments.css
1.2.X/api/: index.html
1.2.X/examples/: hydra.html  (+3 more)
data/: synthetic_control_TEST
docs/: .gitignore  conf.py  examples.rst  guide.rst  img_gen.py  index.rst  install.rst  more.rst  news.rst  requirements.txt  tutorial.rst  versions.rst
examples/: OutlierDetection.ipynb  dataset_examples.py  distance.py  distance_example.py  example1.py  interval_forest_example.py  matrix_profile_example.py  mo_counterfactual_example.py  multivariate_example.py  multivariate_forest.py  nn_counterfactual_example.py  outlier_example.py  outlier_test.py  regression_example.py  regression_test.py  rocket_embedding_example.py  rocket_example.py  sf_counterfactual_example.py  shapelet_embedding_example.py  shapelet_forest.py  shapelet_forest_embedding_example.py  shapelet_forest_example.py
main/: index.html
master/: .buildinfo  api.html  examples.html  genindex.html  guide.html  index.html  install.html  more.html  news.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  tutorial.html  versions.html
migrate-docs/: .buildinfo  examples.html  genindex.html  guide.html  index.html  install.html  more.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
pypf/: __init__.py  _distance.pxd  _distance.pyx  _distribution.pxd  _distribution.pyx  _dtw_distance.pxd  _dtw_distance.pyx  _euclidean_distance.pxd  _euclidean_distance.pyx  _impurity.pxd  _impurity.pyx  _partition.pyx  _sliding_distance.pxd  _sliding_distance.pyx  _tree_builder.pxd  _tree_builder.pyx  _utils.pxd  _utils.pyx  distance.pyx  pf_tree.py  shapelet.py  sliding_distance.pyx  tree.py  tree_builder2.py
tests/: test_tree.py
travis/: build-wheels.sh
v1.0.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
v1.0.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
v1.0.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
v1.0.3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.0.4/: .buildinfo  api.html  examples.html  genindex.html  guide.html  index.html  install.html  objects.inv  py-modindex.html  search.html  tutorial.html
v1.0.5/: .buildinfo  api.html  examples.html  genindex.html  guide.html  index.html  install.html  objects.inv  py-modindex.html  search.html  tutorial.html
v1.0.6/: .buildinfo  api.html  examples.html  genindex.html  guide.html  index.html  install.html  objects.inv  py-modindex.html  search.html  tutorial.html
v1.0.7/: .buildinfo  api.html  examples.html  genindex.html  guide.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
v1.2.0b2/: examples.html  guide.html  index.html  py-modindex.html  searchindex.js
wildboar/: __init__.py  _distance.pxd  _distance.pyx  _dtw_distance.pxd  _dtw_distance.pyx  _euclidean_distance.pxd  _euclidean_distance.pyx  _impurity.pxd  _impurity.pyx  _tree_builder.pxd  _tree_builder.pyx  _utils.pxd  _utils.pyx  distance.py  distance.pyx  ensemble.py  tree.py
(+2574 files in other folders)
