[build-system]

requires = [
    "setuptools>=48.0",
    "wheel",
    "cython>=0.29.24",
    "setuptools_scm[toml]>=6.2",

    # use oldest-supported-numpy which provides the oldest numpy version with
    # wheels on PyPI
    #
    # see: https://github.com/scipy/oldest-supported-numpy/blob/main/setup.cfg
    "oldest-supported-numpy; python_version!='3.10' or platform_system!='Windows' or platform_python_implementation=='PyPy'",

    # For CPython 3.10 under Windows, SciPy requires NumPy 1.22.3 while the
    # oldest supported NumPy is defined as 1.21.6. We therefore need to force
    # it for this specific configuration. For details, see
    # https://github.com/scipy/scipy/blob/c58b608c83d30800aceee6a4dab5c3464cb1de7d/pyproject.toml#L38-L41
    "numpy==1.22.3; python_version=='3.10' and platform_system=='Windows' and platform_python_implementation != 'PyPy'",

    "scikit-learn>=1.2",
    "scipy>=1.3.2",
]

build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["E", "F", "N", "PL" ] 
ignore = ["PLR2004", "N803", "N806"]

[tool.ruff.per-file-ignores]
"docs/conf.py" = ["E", "F", "D", "N", "PL", "RUF", "I001"]
"tests/**/*.py" = ["E", "F", "D", "N", "PL", "RUF" ]

[tool.ruff.pylint]
max-args = 15 # We use many keyword arguments for estimators

[tool.ruff.pydocstyle]
convention = "numpy"
ignore-decorators = ["typing.overload", "numpy.deprecate", "sklearn.utils.deprecated"]

# [tool.ruff.isort]
# lines-after-imports = 2

# [tool.isort]
# profile = "black"
# src_paths = ["src", "tests"]
# skip = "docs/conf.py"

[tool.black]
include = '\.pyi?$'

[tool.setuptools_scm]
write_to = "src/wildboar/version.py"

[tool.docformatter]
wrap-summaries = 79
wrap-descriptions = 72
non-strict = false

[tool.numpydoc-lint]
exclude = ["tests/**/*.py"]
ignore = ["H0002"]
