[project]
name = "wildboar"
authors = [{ name = "Isak Samsten", email = "isak@samsten.se" }]
readme = "README.md"
description = "Time series learning with Python."
dynamic = ["version"]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.19.5",
  "scipy>=1.6.0",
  "scikit-learn>=1.3,<1.6a"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]
keywords = [
  "machine learning",
  "time series",
  "counterfactual explanation",
]

[project.urls]
Homepage = "https://wildboar.dev"
Documentation = "https://wildboar.dev"
Repository = "https://github.com/wildboar-foundation/wildboar"
"Bug Tracker" = "https://github.com/wildboar-foundation/wildboar/issues"

[project.optional-dependencies]
outliers = [
  "networkx",
]

[tool.setuptools_scm]
write_to = "src/wildboar/version.py"
version_scheme = "release-branch-semver"

[tool.setuptools.dynamic]
version = { attr = "wildboar.__version__" }
readme = { file = ["README.md"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pxd"]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cython>=3.0.8",
    "setuptools_scm[toml]>=6.2",
    "numpy>=2",
    "scikit-learn>=1.3,<1.6a",
    "scipy>=1.6.0",
]

build-backend = "setuptools.build_meta"


[tool.ruff]
select = ["E", "F", "N", "PL", "I" ]
ignore = ["PLR2004", "N803", "N806", "F841"]

[tool.ruff.per-file-ignores]
"docs/**/*.py" = ["E", "F", "D", "N", "PL", "RUF", "I001"]
"tests/**/*.py" = ["E", "F", "D", "N", "PL", "RUF" ]

[tool.ruff.pylint]
max-args = 15 # We use many keyword arguments for estimators

[tool.ruff.pydocstyle]
convention = "numpy"
ignore-decorators = ["typing.overload", "numpy.deprecate", "sklearn.utils.deprecated"]

[tool.cython-lint]
max-line-length = 88
ignore = ['E741']

[tool.black]
include = '\.pyi?$'

[tool.docformatter]
wrap-summaries = 79
wrap-descriptions = 72
non-strict = false

[tool.numpydoc-lint]
exclude = ["tests/**/*.py"]
ignore-pattern = ["H0002"]
