[metadata]
name = wildboar
version = attr: wildboar.__version__
url = https://github.com/isakkarlsson/wildboar
license = LGPLv3+
license_files = LICENSE
author = Isak Samsten
author_email = isak@samsten.se
maintainer = Isak Samsten
description = Time series learning with Python.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation = https://isaksamsten.github.io/wildboar/
    Source = https://github.com/isakkarlsson/wildboar
    Bug Tracker = https://github.com/deepcharles/ruptures/issues/
keywords =
    machine learning
    time series
    counterfactual explanation

classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
install_requires =
    numpy>=1.17.4
    scipy>=1.3.2
    scikit-learn>=0.21.3
packages = find:
package_dir =
    = src

[options.package_data]
* = *.pxd

[options.packages.find]
where = src

[build_ext]
inplace=1