[metadata]
name = wildboar
version = attr: wildboar.__version__
url = https://github.com/isakkarlsson/wildboar
license = new BSD
license_files = LICENSE
author = Isak Samsten
author_email = isak@samsten.se
maintainer = Isak Samsten
description = Time series learning with Python.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation = https://isaksamsten.github.io/wildboar/
    Source = https://github.com/isakkarlsson/wildboar
    Bug Tracker = https://github.com/isaksamsten/wildboar/issues
keywords =
    machine learning
    time series
    counterfactual explanation

classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
install_requires =
    numpy>=1.19.2; platform_python_implementation == 'PyPy'
    numpy>=1.17.3; platform_python_implementation != 'PyPy'
    scipy>=1.3.2
    scikit-learn>=1.2rc1,<1.3a0
packages = find_namespace:
package_dir =
    = src

[options.extras_require]
datasets = requests

outliers =
    networkx
    scikit-learn-extra

all =
    requests
    networkx
    scikit-learn-extra

[options.package_data]
* = *.pxd

[options.packages.find]
where = src

[build_ext]
inplace=1

[flake8]
ignore = E121, E123, E126, E226, E24, E704, W503, W504
max-line-length = 88
exclude =
    docs/conf.py
extend-ignore =
    E203